Add searchable client archive
